# authentication-rs

./: .env.example  Cargo.toml  README.md
authentication_backend/: .gitignore  Cargo.toml
authentication_backend/migrations/20170626005539_create_verification_codes/: up.sql
authentication_backend/migrations/20170711003212_create_permissions_table/: down.sql  up.sql
authentication_backend/migrations/20170711003215_create_user_permissions_table/: down.sql  up.sql
authentication_backend/migrations/20170711023955_create_admin_permission/: down.sql  up.sql
authentication_backend/src/: authenticatable.rs  config.rs  error.rs  lib.rs  schema.rs  test_helper.rs  webtoken.rs
authentication_backend/src/config/: connection_pool.rs  db.rs  jwt_secret.rs  mod.rs  password_regex.rs
authentication_backend/src/controllers/: permissions.rs  users.rs  verification_codes.rs  webtokens.rs
authentication_backend/src/error/: error.rs  input_error_kind.rs  mod.rs  password_error_kind.rs  result.rs  username_error_kind.rs
authentication_backend/src/models/: mod.rs  permission.rs  user.rs  user_permission.rs  verification_code.rs
authentication_backend/src/models/permission/: mod.rs  new_permission.rs  permission.rs  test_helper.rs
authentication_backend/src/models/user/: admin.rs  authenticated.rs  authenticated_this_session.rs  helpers.rs  mod.rs  new_user.rs  test_helper.rs  user.rs  user_trait.rs
authentication_backend/src/models/user_permission/: mod.rs  new_user_permission.rs  test_helper.rs  user_permission.rs
authentication_backend/src/models/verification_code/: mod.rs  new_verification_code.rs  verification_code.rs
authentication_backend/src/webtoken/: claims.rs  mod.rs  new_webtoken.rs  test_helper.rs  webtoken.rs
authentication_background/: Cargo.toml  README.md
authentication_background/src/: config.rs  error.rs  handler.rs  hooks.rs  lib.rs  message.rs  receiver.rs
authentication_rocket/: Cargo.toml
authentication_rocket/src/: auth_response.rs  auth_result.rs  error.rs  input_types.rs  lib.rs  routes.rs
authentication_rocket/src/auth_response/: mod.rs  response_body.rs
authentication_rocket/src/controllers/: mod.rs  permissions.rs  users.rs  verification_codes.rs  webtokens.rs
authentication_rocket/src/error/: error_response.rs  mod.rs
authentication_rocket/src/input_types/: auth.rs  create_permission.rs  create_user.rs  give_permission.rs  mod.rs  renewal_token.rs  user_token.rs  user_token_with_password.rs
authentication_rocket/src/jobs/: mailer.rs  mod.rs
authentication_rocket/src/routes/: mod.rs  permissions.rs  users.rs  verification_codes.rs  webtokens.rs
authentication_zmq/: Cargo.toml
authentication_zmq/src/: lib.rs  zmq_async.rs  zmq_stream.rs  zmq_sync.rs
authentication_zmq/src/async/: future.rs  mod.rs  sink.rs  stream.rs
migrations/20170625192832_create_users/: up.sql
migrations/20170626005539_create_verification_codes/: down.sql  up.sql
src/: auth_result.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs
src/models/: user.rs  verification_code.rs
