[package]
name = "authentication"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
rocket_contrib = "0.2.8"
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
frank_jwt = "2.5.1"
bcrypt = "0.1"
r2d2 = "0.7.2"
r2d2-diesel = "0.13.0"
lazy_static = "0.2"
serde = "0.9.2"
serde_json = "0.9.2"
serde_derive = "0.9.2"
