[package]
name = "authentication_backend"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]

[dependencies]
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
jsonwebtoken = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.1"
r2d2 = "0.7.2"
r2d2-diesel = "0.13.0"
lazy_static = "0.2"
rand = "0.3"
