[package]
name = "authentication_backend"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]

[dependencies]
diesel = { version = "0.14.1", features = ["postgres"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
dotenv = "0.10"
dotenv_macros = "0.10"
syntex = "0.58"
jsonwebtoken = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.1"
r2d2 = "0.7.2"
r2d2-diesel = "0.14.0"
lazy_static = "0.2"
rand = "0.3"
regex = "0.2"
chrono = "0.4"
