[package]
name = "authentication_backend"
description = "The types and database required for Authentication"
repository = "http://github.com/asonix/authentication-rs"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
license = "GPL-3.0"

[dependencies]
diesel = { version = "0.15.2", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.10"
dotenv_macros = "0.10"
syntex = "0.58"
jsonwebtoken = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bcrypt = "0.1"
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
lazy_static = "0.2"
rand = "0.3"
regex = "0.2"
chrono = "0.4"

[features]
default = []
test = []

[dev-dependencies.authentication_backend]
path = "."
version = "*"
features = ["test"]
