[package]
name = "authentication_background"
description = "A library for managing a thread pool for background processing"
repository = "http://github.com/asonix/authentication-rs"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]
license = "GPL-3.0"

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
