[package]
name = "authentication_rocket"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]

[dependencies]
authentication_backend = { path = "../authentication_backend" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
