[package]
name = "authentication_rocket"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]

[dependencies]
authentication_backend = { path = "../authentication_backend" }
authentication_background = { path = "../authentication_background" }
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies.authentication_backend]
version = "*"
path = "../authentication_backend"
features = ["test"]
