[package]
name = "authentication_zmq"
version = "0.1.0"
authors = ["Riley Trautman <asonix.dev@gmail.com>"]

[dependencies]
authentication_backend = { path = "../authentication_backend" }
authentication_background = { path = "../authentication_background" }
zmq = "0.8"
futures = "0.1"
futures-cpupool = "0.1"
